--- a/.github/workflows/test-simple.yml
+++ b/.github/workflows/test-simple.yml
@@ -34,4 +34,4 @@ jobs:
 
       - name: Test import
         run: |
-          python -c "import bio_crayon; print('✅ Package imports successfully')" 
+          python -c "import bio_crayon; print('PASS: Package imports successfully')" 
