--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,14 @@ share/python-wheels/
 *.egg
 MANIFEST
 
+docs/build/
+docs/_build/
+
+# Python cache
+__pycache__/
+*.pyc
+
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
