--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,14 +7,13 @@ name = "bio-crayon"
 version = "0.1.0"
 description = "A Python package for managing biological data colormaps"
 readme = "README.md"
-license = {text = "MIT"}
+license = "MIT"
 authors = [
     {name = "Matthias Flotho", email = "matthias.flotho@ccb.uni-saarland.de"}
 ]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Science/Research",
-    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
